# sigil-watermark

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/: index.html
api/config/: index.html
api/detect/: index.html
api/embed/: index.html
api/ghost/: index.html
api/keygen/: index.html
docs/: getting-started.md  index.md  technical-design.md
docs/api/: config.md  detect.md  embed.md  ghost.md  index.md  keygen.md
getting-started/: index.html
scripts/: download_real_images.py  generate_examples.py  generate_vae_example.py  vae_passband_analysis.py
search/: search_index.json
src/sigil_watermark/: __init__.py  color.py  config.py  detect.py  embed.py  fec.py  geometric.py  keygen.py  perceptual.py  tiling.py  transforms.py
src/sigil_watermark/ghost/: spectral_analysis.py
technical-design/: index.html
tests/: conftest.py  test_analytical_fp_rate.py  test_attacks_advanced.py  test_color.py  test_config_sensitivity.py  test_cumulative_attacks.py  test_diverse_images.py  test_false_positive_rates.py  test_fec.py  test_geometric.py  test_ghost.py  test_ghost_lora_propagation.py  test_ghost_robustness.py  test_ghost_strength_sweep.py  test_keygen.py  test_lora_hyperparameter_sweep.py  test_perceptual.py  test_pipeline.py  test_production_roundtrip.py  test_purification_attacks.py  test_real_images.py  test_real_photos.py  test_real_vae_attack.py  test_reencoding.py  test_ring_detection_natural_images.py  test_robustness.py  test_small_images.py  test_social_media_simulation.py  test_targeted_removal.py  test_tile_destruction.py  test_tiling.py  test_transforms.py
